[package]
name = "deep_learning_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
ai_math = {git = "https://github.com/OfflineBot/ai_math"}